Added paging, filtering, and sorting methods
