# pvacseq/server/config/swagger.yaml
@@ -37,13 +37,51 @@ paths:
         items:
           type: "string"
         default: "default"
+      - name: "filters"
+        in: "query"
+        description: "Array of filters to be applied. ex: size>200"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: 'csv'
+        default: "none"
+      - name: "sorting"
+        in: "query"
+        description: "Ordered array of ways to sort data, + before property name\
+        indicating ascending, - indicating descending. ex: +size,-fileID"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: 'csv'
+        default: "none"
+      - name: "page"
+        in: "query"
+        description: "Page of results to return"
+        required: false
+        type: "integer"
+        default: 1
+      - name: "per_page"
+        in: "query"
+        description: "Number of results to return per page"
+        required: false
+        type: "integer"
+        default: 10
       responses:
         200:
-          description: "An array of results"
+          description: "An object containing metadata and an array of results"
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Result"
+              type: "object"
+              properties:
+                _meta:
+                  $ref: "#/definitions/MetaData"
+                results:
+                  type: "array"
+                  items:
+                    $ref: "#/definitions/Result"
         default:
           description: "Unexpected error"
           schema:
@@ -559,6 +597,19 @@ paths:
       summary: "Get list of running processes"
       description: "This endpoint returns a list of active pvacseq runs\n"
       operationId: "pvacseq.server.controllers.processes.processes"
+      parameters:
+      - name: "page"
+        in: "query"
+        description: "Page of information to return"
+        required: false
+        type: "integer"
+        default: 1
+      - name: "per_page"
+        in: "query"
+        description: "Number of objects to return per page"
+        required: false
+        type: "integer"
+        default: 10
       responses:
         200:
           description: "A list of active processes"
@@ -1103,6 +1154,21 @@ definitions:
         items: {
           type: "string"
         }
+  MetaData:
+    type: "object"
+    properties:
+      current_page:
+        type: "integer"
+        description: "The page of information being returned"
+      per_page:
+        type: "integer"
+        description: "The number of items to return per page"
+      total_pages:
+        type: "integer"
+        description: "The total number of pages of data"
+      total_count:
+        type: "integer"
+        description: "The total number of items"
   Error:
     type: "object"
     properties:
